2002-03-07  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSRunLoop.m ([NSRunLoop -acceptInputForMode:]): 
	added a _checkPerformes: call to solve minor issue.
	(performers would only be called after an event was received)
	(credits to Alexander Malmberg)

2002-03-07  Richard Frith-Macdonald <rfm@gnu.org>

	* SSL/Makefile.posramble: store config.h in system specific subdir.
	* SSL/Makefile.preamble: Include headers from Source directory
	so we pick up GSConfig.h

2002-03-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/autogsdoc.m: store and fetch dependency info in .igsdoc
	so we can parse the correct source files for each header when we
	need to.

2002-03-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GNUmakefile: build subproject.
	* Source/Additions/Makefile.preamble: set include flags.
	* Source/Additions/GSXML.m: moved implementation here.
	* Source/Additions/GSMime.m: moved implementation here.
	* Source/GNUmakefile: build subproject.

2002-03-06  Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakefile: build SSL aggregate project
	* config.mak.in: Remove SSL info
	* configure.in: Remove SSL configuration
	* configure: Regenerate
	* SSL/GNUmakefile: Build SSL bundle
	* SSL/GSUnixSSLHandle.m: SSL bundle source from Source directory
	* SSL/Makefile.postamble: Build SSL bundle
	* SSL/Makefile.preamble: Build SSL bundle
	* SSL/config.h.in: Trivial config for SSL bundle
	* SSL/config.mak.in: SSL info for building bundle.
	* SSL/configure.in: Configuration for SSKL bundle.
	* Source/GNUmakefile: Don't build SSL bundle.
	* Source/GSUnixSSLHandle.m: Moved to SSL directory.
	* Source/Makefile.postamble: Don't build SSL bundle.
	* Source/Makefile.preamble: Don't build SSL bundle.
	Alterations to make the SSL bundle capable of standalone
	building - for use on systems where the base package has
	only been installed in binary form.
	Initial attempt!

2002-03-06  Richard Frith-Macdonald <rfm@gnu.org>
