@@ -24,6 +24,8 @@
 
 GNUSTEP_MAKEFILES = $(GNUSTEP_SYSTEM_ROOT)/Makefiles
 
+GNUSTEP_LOCAL_ADDITIONAL_MAKEFILES=../../base.make
+
 include $(GNUSTEP_MAKEFILES)/common.make
 
 SUBPROJECT_NAME=Additions
